fix: dark mode (Stopwatch, Category Builder) (#570)
* dark mod support for hovering StopwatchEntry

* fix for filter button in dark mode

* fix: dark mode for category builder

* Remove `#root`

---------

--- a/static/dark.css
+++ b/static/dark.css
@@ -8,7 +8,7 @@ a, button, span, div, select {
   outline: none;
 }
 
-body, button, html {
+body, button, html, table {
   color: #e9ebf0 !important;
 }
 
@@ -206,4 +206,18 @@ div[style="background-color: rgb(238, 238, 238);"] {
 
 div[style="color: rgb(85, 85, 85); font-size: 0.9em;"] {
   color: #e9ebf0 !important;
+}
+
+.stopwatch-entry:hover,
+.category-builder-word:hover>* {
+  background-color: #282c32 !important;
+}
+
+.category-builder-word .table td,
+.category-builder-word .table th {
+  border-color: #3d444d;
+}
+
+.bg-light {
+  background-color: #1a1d24 !important;
 }
